@@ -3,6 +3,7 @@ libmpdclient 2.4 (2010/??/??)
 * resolver: fix IPv4/IPv6 on the loopback device
 * player: support the command "clearerror"
 * connection: add function mpd_connection_get_server_error_location()
+* settings: expose connection settings
 
 
 libmpdclient 2.3 (2010/05/25)
